deleted unecessary section placeholders

--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "3ebec0e6",
    "metadata": {},
    "outputs": [],
@@ -86,17 +86,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "341a06dc",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Simulating 1 qubits.. |                                                      | [  0%]"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -151,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "37aa950d",
    "metadata": {},
    "outputs": [
@@ -159,7 +152,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'gate counts': {'cx': 12, 'rx': 2, 'gphase': 4, 'p': 2, 'cz': 6, 'u3': 4, 'x': 8}, 'depth': 33}\n"
+      "{'gate counts': {'u3': 4, 'cz': 6, 'p': 2, 'rx': 2, 'gphase': 4, 'cx': 12, 'x': 8}, 'depth': 33}\n"
      ]
     }
    ],
@@ -180,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "3b7698cf",
    "metadata": {},
    "outputs": [
@@ -188,13 +181,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "k = 1: {'gate counts': {'cx': 4, 'gphase': 3, 'cz': 2, 'u3': 2, 'z': 1, 'x': 5}, 'depth': 16}\n",
-      "k = 2: {'gate counts': {'cx': 8, 'gphase': 6, 'cz': 4, 'u3': 4, 'z': 2, 'x': 10}, 'depth': 32}\n",
-      "k = 3: {'gate counts': {'cx': 12, 'gphase': 9, 'cz': 6, 'u3': 6, 'z': 3, 'x': 15}, 'depth': 48}\n",
-      "k = 4: {'gate counts': {'cx': 16, 'gphase': 12, 'cz': 8, 'u3': 8, 'z': 4, 'x': 20}, 'depth': 64}\n",
-      "k = 5: {'gate counts': {'cx': 20, 'gphase': 15, 'cz': 10, 'u3': 10, 'z': 5, 'x': 25}, 'depth': 80}\n",
-      "k = 6: {'gate counts': {'cx': 24, 'gphase': 18, 'cz': 12, 'u3': 12, 'z': 6, 'x': 30}, 'depth': 96}\n",
-      "k = 7: {'gate counts': {'cx': 28, 'gphase': 21, 'cz': 14, 'u3': 14, 'z': 7, 'x': 35}, 'depth': 112}\n"
+      "k = 1: {'gate counts': {'u3': 2, 'cz': 2, 'z': 1, 'cx': 4, 'x': 5, 'gphase': 3}, 'depth': 16}\n",
+      "k = 2: {'gate counts': {'u3': 4, 'cz': 4, 'z': 2, 'cx': 8, 'x': 10, 'gphase': 6}, 'depth': 32}\n",
+      "k = 3: {'gate counts': {'u3': 6, 'cz': 6, 'z': 3, 'cx': 12, 'x': 15, 'gphase': 9}, 'depth': 48}\n",
+      "k = 4: {'gate counts': {'u3': 8, 'cz': 8, 'z': 4, 'cx': 16, 'x': 20, 'gphase': 12}, 'depth': 64}\n",
+      "k = 5: {'gate counts': {'u3': 10, 'cz': 10, 'z': 5, 'cx': 20, 'x': 25, 'gphase': 15}, 'depth': 80}\n",
+      "k = 6: {'gate counts': {'u3': 12, 'cz': 12, 'z': 6, 'cx': 24, 'x': 30, 'gphase': 18}, 'depth': 96}\n",
+      "k = 7: {'gate counts': {'u3': 14, 'cz': 14, 'z': 7, 'cx': 28, 'x': 35, 'gphase': 21}, 'depth': 112}\n"
      ]
     }
    ],
@@ -234,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "bc38a43f",
    "metadata": {},
    "outputs": [],
@@ -337,10 +330,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3f8f1250",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QUANTUM SIMULATION                                                                   \u001b[2K\n",
+      " [0.0298632  0.57992492 0.62416743 0.52269522] \n",
+      "CLASSICAL SOLUTION\n",
+      " [-0.02986321  0.57992485  0.6241675   0.52269522]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from qrisp import *\n",
@@ -392,10 +396,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7cda9d58",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QUANTUM SIMULATION                                                                   \u001b[2K\n",
+      " [0.02844491 0.55538446 0.53010192 0.64010229] \n",
+      "CLASSICAL SOLUTION\n",
+      " [0.02944539 0.55423278 0.53013239 0.64102936]\n"
+     ]
+    }
+   ],
    "source": [
     "# Assuming A and b are defined as above\n",
     "kappa = np.linalg.cond(A)\n",
@@ -431,10 +446,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "fc2235fc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                                                     \u001b[2K\r"
+     ]
+    }
+   ],
    "source": [
     "from qrisp.operators import X, Z\n",
     "\n",
@@ -483,42 +506,6 @@
     "- The RUS Protocol: Using the Repeat-Until-Success (RUS) mechanism in Qrisp to probabilistically project the system into the desired filtered state.\n",
     "\n",
     "- Performance Verification: A step-by-step comparison showing how the expectation value of the energy significantly drops—indicating a much higher overlap with the true ground state—after the GQSP filter is applied.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a7b09e62",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5785ae0b",
-   "metadata": {},
-   "source": [
-    "### Hamiltonian simulation with LCU in Qrisp: ``.sim``"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34c5017c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c9f4137f",
-   "metadata": {},
-   "source": [
-    "## Conclusion\n",
-    "\n",
-    "  \n",
-    "\n",
-    "We’ve moved from building matrices to performing functional analysis on a quantum computer. Here is your cheat sheet:Qubitization is the engine. It turns a Block Encoding into a \"Quantum Walk\" that stays within tiny 2D subspaces.Chebyshev Polynomials are the language. They are the natural output of repeating a Qubitized operator and are mathematically optimal for approximations.QSP is the steering wheel. By interleaving phase shifts, we can transform $A$ into almost any $f(A)$.Qrisp is the autopilot. It solves for the phase angles and manages the ancillas so you can treat $f(A)$ like a standard programming object."
    ]
   }
  ],
