Minor changes to the tutorials; cleaned markdown cells

--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol1.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol1.ipynb
@@ -5,12 +5,18 @@
    "id": "34b89908",
    "metadata": {},
    "source": [
-    "# BlockEncoding class 101\n",
+    "# BlockEncoding class 101: Block encoding, LCU, resource estimation\n",
     "\n",
     "In classical computer science, we often perform operations directly on matrices, such as inversion, exponentiation, or polynomial transformations. In quantum computing, however, all physical operations must be unitary (represented by matrices U such that $U^\\dagger U=\\mathbb{1}$), which means they are reversible and preserve the norm of the state vector.\n",
     "\n",
-    "Most matrices of interest, such as Hamiltonians (which describe system energy), are Hermitian but not unitary. To solve this, modern quantum algorithms use Block Encodings to \"embed\" these non-unitary matrices into a larger unitary system, and then use Quantum Signal Processing (QSP) and its generalizations to manipulate their values. \n",
-    "\n",
+    "Most matrices of interest, such as Hamiltonians (which describe system energy), are Hermitian but not unitary. To solve this, modern quantum algorithms use Block Encodings to \"embed\" these non-unitary matrices into a larger unitary system, and then use Quantum Signal Processing (QSP) and its generalizations to manipulate their values. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8215b59c",
+   "metadata": {},
+   "source": [
     "## What are block-encodings?\n",
     "Block encoding is a foundational technique that allows a quantum computer to represent a general matrix $A$ (where $∥A∥\\leq1$) as the top-left block of a larger unitary matrix $U$.\n",
     "\n",
@@ -28,9 +34,7 @@
     "\n",
     "- and lastly, the ``.from_lcu`` constructs a BlockEncoding using the Linear Combination of Unitaries approach.\n",
     "\n",
-    "The first two options are rather self-explanatory, really... You (the user) provide the matrix and/or Hamiltonian you'd like to block encode, invoke the appropriate method for your desired input and, whoosh, Qrisp block encodes it for ya.\n",
-    "\n",
-    "\n"
+    "The first two options are rather self-explanatory, really... You (the user) provide the matrix and/or Hamiltonian you'd like to block encode, invoke the appropriate method for your desired input and, whoosh, Qrisp block encodes it for ya."
    ]
   },
   {
@@ -62,11 +66,11 @@
     "\n",
     "If such a matrix $A$ is expressed as shown above (as a weighted sum of unitaries), the LCU algorithmic primitive uses three (well, technically two) oracles:\n",
     "\n",
-    "- PREPARE prepares (kinda obvious, huh?) a superposition of index states weighted of the square roots of the coefficients $\\alpha_i$ in the ancillary variable:$$\\text{PREP}\\ket{0}_a=\\sum_{i=0}^{m-1}\\sqrt{\\frac{\\alpha_i}{\\alpha}}\\ket{i}_a$$\n",
+    "- $\\text{PREPARE}$ prepares (kinda obvious, huh?) a superposition of index states weighted of the square roots of the coefficients $\\alpha_i$ in the ancillary variable:$$\\text{PREP}\\ket{0}_a=\\sum_{i=0}^{m-1}\\sqrt{\\frac{\\alpha_i}{\\alpha}}\\ket{i}_a$$\n",
     "\n",
-    "- SELECT applies the corresponding unitary $U_i$ to the operand (target) variable, controlled by the ancillary variable:$$\\text{SEL}=\\sum_{i=0}^{m-1}\\ket{i}\\bra{i}_a\\otimes U_i$$,\n",
+    "- $\\text{SELECT}$ applies the corresponding unitary $U_i$ to the operand (target) variable, controlled by the ancillary variable:$$\\text{SEL}=\\sum_{i=0}^{m-1}\\ket{i}\\bra{i}_a\\otimes U_i,$$\n",
     "\n",
-    "- and finally PREPARE$^\\dagger$, which then essentially unprepares the ancillary variable.\n",
+    "- and finally, $\\text{PREPARE}^\\dagger$, which then essentially unprepares the ancillary variable.\n",
     "\n",
     "We have successfully applied $A$ to our operand when the ancillary variable is measured in the $\\ket{0}$ state.\n",
     "\n",
@@ -149,8 +153,14 @@
    "id": "4b951aa4",
    "metadata": {},
    "source": [
-    "Why even bother with ``.from_lcu`` then? Fair question. The answer hides in what's happening underneath, and the amount of **quantum resources** that these two methods use.\n",
-    "\n",
+    "Why even bother with ``.from_lcu`` then? Fair question. The answer hides in what's happening underneath, and the amount of **quantum resources** that these two methods use."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14f6861b",
+   "metadata": {},
+   "source": [
     "## Quantum Resource Estimation w/ ``.resources``\n",
     "\n",
     "\"Whoa, whoa, whoa?! Quantum resources? As in quanutm resources in Quantum Resource Estimation?\" you ask.\n",
@@ -540,8 +550,14 @@
     "\n",
     "But for most \"real-world\" (or real-simulation) use cases, ``.apply_rus`` is your best friend. It takes a function that prepares your qubits (operand_prep) and returns a new function that handles the messy \"measure-reset-repeat\" logic for you.\n",
     "\n",
-    "Oh, and you can perform quantum resource estimation even before simulating. How nice, right?!\n",
-    "\n",
+    "Oh, and you can perform quantum resource estimation even before simulating. How nice, right?!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2e7c4e1",
+   "metadata": {},
+   "source": [
     "## Expressing new BlockEncodings using arithmetic operations\n",
     "\n",
     "Up until now, we’ve treated Block Encodings as static objects—you build them, and you apply them. But in the real world (and especially in quantum chemistry or condensed matter physics), operators are rarely solitary. They are sums of interactions, products of symmetries, and scaled potentials.\n",
@@ -672,8 +688,14 @@
    "id": "6d8c3530",
    "metadata": {},
    "source": [
-    "Sometimes you want to build a large system by gluing smaller ones together. Here, we use ``.kron()`` to combine two 2-qubit systems into a 4-qubit system, and then use ``@`` to compose it with another operator.\n",
-    "\n",
+    "Sometimes you want to build a large system by gluing smaller ones together. Here, we use ``.kron()`` to combine two 2-qubit systems into a 4-qubit system, and then use ``@`` to compose it with another operator."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "530ed25c",
+   "metadata": {},
+   "source": [
     "## Recap\n",
     "\n",
     "We have journeyed from the mathematical definition of Block Encodings to high-level arithmetic operations on quantum operators. Here is the distilled wisdom from this tutorial:\n",
@@ -688,8 +710,14 @@
     "\n",
     "- Composability: You can build complex operators using standard Python math (``+``, ``-``, ``@``, ``*``). Qrisp handles the heavy lifting of managing coefficients and ancilla qubits, letting you focus on the algorithm logic.\n",
     "\n",
-    "By mastering Block Encodings in Qrisp, you aren't just manipulating matrices; you are structuring quantum algorithms in a way that is modular, scalable, and ready for the future of fault-tolerant computing. Now, go forth and encode!\n",
-    "\n",
+    "By mastering Block Encodings in Qrisp, you aren't just manipulating matrices; you are structuring quantum algorithms in a way that is modular, scalable, and ready for the future of fault-tolerant computing. Now, go forth and encode!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d704beb",
+   "metadata": {},
+   "source": [
     "## Motivation\n",
     "\n",
     "MFeeling like you mastered the BlockEncodings class? Good. Now let's use it on some state-of-the-art research applications. In the next tutorial, we move from simple algebra to Quantum Functional Analysis, transforming a matrix’s entire spectrum using Quantum Signal Processing (QSP).\n",
