--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
@@ -5,7 +5,7 @@
    "id": "b286314c",
    "metadata": {},
    "source": [
-    "# BlockEncoding class 201\n",
+    "# BlockEncoding class 201: Qubitization, Chebyshev polynomials, and QSP\n",
     "\n",
     "Welcome back! In the previous tutorial, we learned how to \"embed\" a non-unitary matrix $A$ in the top left block a larger unitary $U$ using the ``BlockEncoding`` class. But just having $A$ block encoded usually isn't enough. Often, we want to compute functions of that matrix—like $e^{-iAt}$ for simulating physics (Hamiltonians), or $A^{-1}$ for solving linear systems, or even applying step-functions or the gaussian as a filter for ground-state preparation. \n",
     "\n",
@@ -13,10 +13,26 @@
     "\n",
     "After learning about Qubitization, this tutorial will also explain how to block-encode Chebyshev polynomials and why they are useful. We will then show how to run the algorithms stemming from QSP in Qrisp, and how the ``BlockEncoding`` class makes polynomial transformations, solving linear systems, and hamiltonian simulation as simple as calling ``.poly``, ``.inv``, and ``.sim`` methods respectively.\n",
     "\n",
-    "But first thing's first. Let's break down the concept called qubitization.\n",
+    "Here's a summary:\n",
     "\n",
+    "| Method | Purpose | Mathematical Basis |\n",
+    "| :--- | :--- | :--- |\n",
+    "| **`.qubitization()`** | Transforms $A$ into a \"walk operator\" $W$ | Interleaved ``reflection`` + ``qswitch`` |\n",
+    "| **`.chebyshev(k)`** | Computes the $k$-th Chebyshev polynomial $T_k$ | Iterative application of $W^k$ (``.qubitization``) |\n",
+    "| **`.poly(coeffs)`** | Applies an arbitrary polynomial transformation $P(A)$ | GQSP |\n",
+    "| **`.inv(eps, kappa)`** | Solves the linear system $Ax = b$ | $1/x$ polynomial approximation |\n",
+    "| **`.sim(t, N)`** | Simulates Hamiltonian evolution $e^{-iHt}$ | Jacobi-Anger expansion (Bessel functions) |\n",
+    "\n",
+    "But first thing's first. Let's break down the concept called qubitization."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14f9a642",
+   "metadata": {},
+   "source": [
     "## Qubitization\n",
-    "If a Block Encoding is a \"static snapshot\" of a matrix $A$, Qubitization is what makes it \"move\". Technically, Qubitization is a method to transform an $(\\alpha, m, \\epsilon)$-block-encoding of a matrix $A$ into a special unitary operator $W$, often refferod to as the \"walk operator\". This operator has a nice property: it maps the eigenvalues $\\lambda$ of $A$ to the eigenvalues $e^{\\pm i \\arccos(\\lambda/\\alpha)}$ in a set of two-dimensional invariant subspaces. \n",
+    "If a Block Encoding is a \"static snapshot\" of a matrix $A$, Qubitization is what makes it \"move\". Technically, Qubitization is a method to transform an $(\\alpha, m, \\epsilon)$-block-encoding of a matrix $A$ into a special unitary operator $W$, often referred to as the \"walk operator\". This operator has a nice property: it maps the eigenvalues $\\lambda$ of $A$ to the eigenvalues $e^{\\pm i \\arccos(\\lambda/\\alpha)}$ in a set of two-dimensional invariant subspaces. \n",
     "\n",
     "Given a Hermitian matrix $H$ and its block-encoding $(U, G)$, where $G\\ket{0} = \\ket{G}$, we use the definition of the reflection operator $R$ acting on the ancilla space as $R = (2\\ket{G}\\bra{G}_a \\otimes \\mathbb{1}_a)\\otimes \\mathbb{1}_{s}$ from [Lemma 1 in Exact and efficient Lanczos method on a quantum computer](https://arxiv.org/pdf/2208.00567). To \"qubitize\" the encoding, we interleave the SELECT operator with this reflection. The Qubitized Walk Operator $W$ is defined as $W = \\text{SELECT}\\cdot R$.\n",
     "\n",
@@ -63,7 +79,7 @@
    "source": [
     "The resulting object, ``BE_walk``, is a new ``BlockEncoding`` instance representing the walk operator $W$. A thing to remember from this example is the fact that when you invoke methods of the ``BlockEncoding`` class like ``.qubitization``, or later ``.poly`` and ``.sim``, Qrisp qubitizes your BlockEncoding object under the hood, handling the ancilla management and reflection logic for you, abstracting away the need to know how to implement these methods as (trigger warning) circuits.\n",
     "\n",
-    "Crucially, the ``.qubitization`` operator is also how oneencodes the Chebyshev polynomials of the Hamiltonian, as we'll learn in the next part of the tutorial. \n",
+    "Crucially, the ``.qubitization`` operator is also how one encodes the Chebyshev polynomials of the Hamiltonian, as we'll learn in the next part of the tutorial. \n",
     "\n",
     "### Block encoding Chebyshev polynomials\n",
     "One of the most powerful features of Qubitization is its natural relationship with Chebyshev polynomials of the first kind, $T_k(x)$, defined as $T_k(\\cos \\theta) = \\cos(k\\theta)$. If we apply the walk operator $W$ $k$-times, the resulting unitary $W^k$ contains $T_k(\\frac{A}{\\alpha})$ block encoded in the top-left block:\n",
@@ -75,7 +91,7 @@
     "\n",
     "- Approximation Theory: According to the Chebyshev Equioscillation Theorem, $T_k(x)$ provides the best uniform approximation to a function over the interval $[-1, 1]$. This ensures that our quantum algorithm achieves the desired precision $\\epsilon$ with the minimum possible quantum resources.\n",
     "\n",
-    "we think that, again, some visual aid is needed. By appyling the ``.qubitization`` operator $k$ times, we block encode the $k$-th Chebyshev polynomial of the first kind $T_k$. If you apply $W^k=(RU)^k$ $k$ times, you get $T_k$ block encoded. Do it once, $k=1$, you get the top left figure. Do it twice ($k=2$), you block-encode $T_2$ (top right figure). Do it $k=5$ times... yup, you guessed it (bottom right figure):\n",
+    "we think that, again, some visual aid is needed. By applying the ``.qubitization`` operator $k$ times, we block encode the $k$-th Chebyshev polynomial of the first kind $T_k$. If you apply $W^k=(RU)^k$ $k$ times, you get $T_k$ block encoded. Do it once, $k=1$, you get the top left figure. Do it twice ($k=2$), you block-encode $T_2$ (top right figure). Do it $k=5$ times... yup, you guessed it (bottom right figure):\n",
     "\n",
     "![Alt text](chebyshev.png)\n",
     "\n",
@@ -319,8 +335,14 @@
     "\n",
     "Apart from that, finding phase factors for standard QSVT is often a hard optimization problem scaling as $\\tilde{O}(d^2)$. In the Generalized (GQSP) framework, phases can often be computed in linear time $\\tilde{O}(d)$, making it significantly more practical for more quantum resource heavy application.\n",
     "\n",
-    "Ok, enough of this, let's now show how you can use, run, simulate, and provide resource analysis for there kinds of algorithms.\n",
-    "\n",
+    "Ok, enough of this, let's now show how you can use, run, simulate, and provide resource analysis for there kinds of algorithms."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26536a3c",
+   "metadata": {},
+   "source": [
     "## QSP with Qrisp\n",
     "\n",
     "### Polynomial transformations: ``.poly``\n",
