cosmetic improvements to tutorials

--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol1.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol1.ipynb
@@ -9,7 +9,21 @@
     "\n",
     "In classical computer science, we often perform operations directly on matrices, such as inversion, exponentiation, or polynomial transformations. In quantum computing, however, all physical operations must be unitary (represented by matrices U such that $U^\\dagger U=\\mathbb{1}$), which means they are reversible and preserve the norm of the state vector.\n",
     "\n",
-    "Most matrices of interest, such as Hamiltonians (which describe system energy), are Hermitian but not unitary. To solve this, modern quantum algorithms use Block Encodings to \"embed\" these non-unitary matrices into a larger unitary system, and then use Quantum Signal Processing (QSP) and its generalizations to manipulate their values. "
+    "Most matrices of interest, such as Hamiltonians (which describe system energy), are Hermitian but not unitary. To solve this, modern quantum algorithms use Block Encodings to \"embed\" these non-unitary matrices into a larger unitary system, and then use Quantum Signal Processing (QSP) and its generalizations to manipulate their values. \n",
+    "\n",
+    "Here's the breakdown of what you'll learn in this tutorial:\n",
+    "\n",
+    "| Method | Purpose | Typical Use Case |\n",
+    "| :--- | :--- | :--- |\n",
+    "| ``.from_array(arr)`` | Encodes a NumPy matrix | Quick prototyping of small, specific matrices. |\n",
+    "| ``.from_operator(op)`` | Encodes a Hamiltonian | Physics and Chemistry simulations. |\n",
+    "| ``.from_lcu(coeffs, unitaries)`` | Custom weighted sum of unitaries | High-efficiency hardware implementation. |\n",
+    "| ``.resources(qv)`` | Estimates gate counts and depth | Resource analysis and benchmarking. |\n",
+    "| ``.apply(qv)`` | Adds gates to the circuit | NISQ hardware with manual post-selection. |\n",
+    "| ``.apply_rus(prep_func)`` | Deterministic matrix application | Fault-tolerant / Repeat-Until-Success logic. |\n",
+    "| ``+``, ``-``, ``*``, ``@``, ``.kron()`` | Algebraic arithmetic on encodings | Constructing complex composite systems. |\n",
+    "\n",
+    "Once all these concepts become second nature, we'll build on them in the next tutorial, applying them for performing arbitrary polynomial transformations, solving linear systems, and hamiltonian simulation. All by using methods of the ``BlockEncoding`` class. Clean. Intuitive. Qrisp."
    ]
   },
   {
