--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
@@ -5,7 +5,7 @@
    "id": "b286314c",
    "metadata": {},
    "source": [
-    "# BlockEncoding class 201: Qubitization, Chebyshev polynomials, and QSP\n",
+    "# BlockEncoding class 201: Qubitization, Chebyshev polynomials, QSP\n",
     "\n",
     "Welcome back! In the previous tutorial, we learned how to \"embed\" a non-unitary matrix $A$ in the top left block a larger unitary $U$ using the ``BlockEncoding`` class. But just having $A$ block encoded usually isn't enough. Often, we want to compute functions of that matrix—like $e^{-iAt}$ for simulating physics (Hamiltonians), or $A^{-1}$ for solving linear systems, or even applying step-functions or the gaussian as a filter for ground-state preparation. \n",
     "\n",
@@ -17,11 +17,11 @@
     "\n",
     "| Method | Purpose | Mathematical Basis |\n",
     "| :--- | :--- | :--- |\n",
-    "| **`.qubitization()`** | Transforms $A$ into a \"walk operator\" $W$ | Interleaved ``reflection`` + ``qswitch`` |\n",
-    "| **`.chebyshev(k)`** | Computes the $k$-th Chebyshev polynomial $T_k$ | Iterative application of $W^k$ (``.qubitization``) |\n",
-    "| **`.poly(coeffs)`** | Applies an arbitrary polynomial transformation $P(A)$ | GQSP |\n",
-    "| **`.inv(eps, kappa)`** | Solves the linear system $Ax = b$ | $1/x$ polynomial approximation |\n",
-    "| **`.sim(t, N)`** | Simulates Hamiltonian evolution $e^{-iHt}$ | Jacobi-Anger expansion (Bessel functions) |\n",
+    "| ``.qubitization()`` | Transforms $A$ into a \"walk operator\" $W$ | Interleaved ``reflection`` + ``qswitch`` |\n",
+    "| ``.chebyshev(k)`` | Computes the $k$-th Chebyshev polynomial $T_k$ | Iterative application of $W^k$ (``.qubitization``) |\n",
+    "| ``.poly(coeffs)`` | Applies an arbitrary polynomial transformation $P(A)$ | GQSP |\n",
+    "| ``.inv(eps, kappa)`` | Solves the linear system $Ax = b$ | $1/x$ polynomial approximation |\n",
+    "| ``.sim(t, N)`` | Simulates Hamiltonian evolution $e^{-iHt}$ | Jacobi-Anger expansion (Bessel functions) |\n",
     "\n",
     "But first thing's first. Let's break down the concept called qubitization."
    ]
@@ -412,6 +412,8 @@
     "### Solving linear systems: ``.inv``\n",
     "\n",
     "Matrix inversion is implemented via Quantum Eigenvalue Transformation (QET) using a polynomial approximation of $1/x$ over the domain $D_{\\kappa} = [-1, -1/\\kappa] \\cup [1/\\kappa, 1]$. The polynomial degree scales as $\\mathcal{O}(\\kappa \\log(\\kappa/\\epsilon))$, where $\\kappa$ is the condition number.\n",
+    "\n",
+    "To paraphrase, the smaller the set precision $\\epsilon$, the higher the degree of polynomial we need to approximate the inverse function, translating directly to requirind more quantum resources for the execution of the algorithm.\n",
     "\n",
     "Let's, for example solve the Quantum Linear System Problem $Ax=b$"
    ]
