Added content on CKS and Lanczos. Added image of unary magic in CKS. CONTENT-WISE, THE TUTORIAL IS NOW COMPLETE (apart of some sections I'd need help with). So long, and thanks for all the fish.

--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol1.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol1.ipynb
@@ -72,6 +72,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "21d826f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qrisp.block_encodings import BlockEncoding\n",
+    "from qrisp.operators import X, Y\n",
+    "H = X(0)*X(1) + 0.2*Y(0)*Y(1)\n",
+    "B_H = BlockEncoding.from_operator(H)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e320374f",
    "metadata": {},
@@ -96,7 +109,7 @@
     "\n",
     "$G$ simply prepares the ancilary variable in a superposition defined by the coefficients (or the weights) of the weighted sum of unitaries (LCU):$$G\\ket{0}_{in\\_case}=\\ket{G}_{in\\_case}.$$ Here we've denoted the ancillary variable as ``in_case``, short for \"inner case\".\n",
     "\n",
-    "$U$, on the other hand then selects \"just the right amount\" of each of the underlying unitaries in the weighted sum: $$U\\ket{i}_{in\\_case}\\ket{\\psi}_{operand}=\\ket{i}_{in\\_case}U_i\\ket{\\psi}_{operand}$$.\n",
+    "$U$, on the other hand then selects \"just the right amount\" of each of the underlying unitaries in the weighted sum: $$U\\ket{i}_{in\\_case}\\ket{\\psi}_{operand}=\\ket{i}_{in\\_case}U_i\\ket{\\psi}_{operand}.$$\n",
     "\n",
     "As seen in the figure above, this can be done via multiple controlled operations. In Qrisp, however, we use ``qswitch``, which is just another name for the select operator (multiplexor is another name found in literature for the same thing, btw). What's so special about ``qswitch``? Well, we've implemented a massively more efficient approach about how to apply such a (quantum) switch case (hence the name) based on balanced binary trees. For further information about this, please refer to the paper from Khattar and Gidney, [Rise of conditionally clean ancillae for efficient quantum circuit constructions](https://arxiv.org/pdf/2407.17966v1).\n",
     "\n",
@@ -111,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "657c957a",
    "metadata": {},
    "outputs": [
@@ -154,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "545b2832",
    "metadata": {},
    "outputs": [],
@@ -190,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "2de958a2",
    "metadata": {},
    "outputs": [
@@ -198,7 +211,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'gate counts': {'gphase': 2, 'p': 4, 'cx': 67, 't': 21, 't_dg': 28, 'cy': 4, 'u3': 14, 'h': 14, 'x': 9}, 'depth': 107}\n"
+      "{'gate counts': {'cy': 4, 'h': 14, 'cx': 67, 'x': 9, 't': 21, 'gphase': 2, 't_dg': 28, 'p': 4, 'u3': 14}, 'depth': 107}\n"
      ]
     }
    ],
@@ -235,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "fedc47d3",
    "metadata": {},
    "outputs": [],
@@ -267,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "5dc2a98b",
    "metadata": {},
    "outputs": [],
@@ -288,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "3211ebcd",
    "metadata": {},
    "outputs": [
@@ -296,14 +309,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Simulating 2 qubits.. |                                                      | [  0%]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'gate counts': {'gphase': 2, 'p': 2, 'cx': 36, 's': 2, 't': 10, 't_dg': 12, 'u3': 6, 'h': 10, 'x': 5, 'measure': 2}, 'depth': 58}\n"
+      "{'gate counts': {'h': 10, 'cx': 36, 'x': 5, 't': 10, 's': 2, 'gphase': 2, 't_dg': 12, 'p': 2, 'u3': 6, 'measure': 2}, 'depth': 58}\n"
      ]
     }
    ],
@@ -364,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "61aa1e3b",
    "metadata": {},
    "outputs": [
@@ -385,11 +391,9 @@
     "BE = BlockEncoding.from_operator(H)\n",
     "b = np.array([1.,2.,3.,1.,1.,2.,3.,1.,1.,2.,3.,1.,1.,2.,3.,1.])\n",
     "\n",
-    "# Prepare initial system state\n",
     "operand = QuantumFloat(4)\n",
     "prepare(operand, b)\n",
     "\n",
-    "# Apply the operator to an initial system state\n",
     "ancillas = BE.apply(operand)"
    ]
   },
@@ -403,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "f9145b6b",
    "metadata": {},
    "outputs": [
@@ -411,9 +415,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.16984156 0.35355339 0.16984156 0.24019223 0.2941742  0.32522182\n",
-      " 0.2941742  0.16984156 0.19611614 0.2941742  0.19611614 0.13867505\n",
-      " 0.31008684 0.2773501  0.31008684 0.        ]\n"
+      "[0.13255722 0.35725936 0.13507263 0.22511141 0.31286858 0.26789672\n",
+      " 0.31299329 0.13365669 0.13715134 0.35420129 0.13561328 0.22519808\n",
+      " 0.31442391 0.26751405 0.31470305 0.1324836 ]\n"
      ]
     }
    ],
@@ -424,7 +428,7 @@
     "\n",
     "# Use backend keyword to specify quantum backend\n",
     "res_dict = multi_measurement([operand] + ancillas,\n",
-    "                            shots=1000,\n",
+    "                            shots=1000000,\n",
     "                            backend=example_backend)\n",
     "\n",
     "# Post-selection on ancillas being in |0> state\n",
@@ -446,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "e242d614",
    "metadata": {},
    "outputs": [
@@ -458,7 +462,7 @@
       " 0.31304952+0.j 0.26832816+0.j 0.31304952+0.j 0.13416408+0.j\n",
       " 0.13416408+0.j 0.35777088+0.j 0.13416408+0.j 0.2236068 +0.j\n",
       " 0.31304952+0.j 0.26832816+0.j 0.31304952+0.j 0.13416408+0.j]\n",
-      "0.21235338033735252\n"
+      "0.006389082261958811\n"
      ]
     }
    ],
@@ -502,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "a7e148cc",
    "metadata": {},
    "outputs": [
@@ -510,7 +514,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.13416408+0.j 0.35777088+0.j 0.13416408+0.j 0.2236068 +0.j                         \u001b[2K\u001b[2K\n",
+      "[0.13416408+0.j 0.35777088+0.j 0.13416408+0.j 0.2236068 +0.j                         \u001b[2K\n",
       " 0.31304952+0.j 0.26832816+0.j 0.31304952+0.j 0.13416408+0.j\n",
       " 0.13416408+0.j 0.35777088+0.j 0.13416408+0.j 0.2236068 +0.j\n",
       " 0.31304952+0.j 0.26832816+0.j 0.31304952+0.j 0.13416408+0.j]\n",
@@ -611,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "b41f3796",
    "metadata": {},
    "outputs": [
@@ -659,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "72199b60",
    "metadata": {},
    "outputs": [
