renamed two images since they were displayed as another image upon compiling html. In notebook they appear correctly displayed. Weird

--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "This seems like a mouthful, but in order for this tutorial to cater to both developers coming from the classical domain, as well as researchers in quantum computing, it's the \"necessary evil\". To make it up to you, we're going to show how in Qrisp, you don't need to build these reflections manually. But first, some visual aid so that you see that it's not as complex as it sounds.\n",
     "\n",
-    "![Alt text](walk_operator.png)\n",
+    "![Alt text](qubitization.png)\n",
     "\n",
     "In the previous tutorial you've already learned how we use the $\\text{SELECT}$ by just calling ``q_switch``. Well, what if we told you that performing the reflection operation above you can just use the ``reflection`` function? Yup, that's the cool thing about modular software development approach Qrisp is taking with its focus on high-level abstractions. Let's get to coding!\n",
     "\n",
@@ -97,7 +97,7 @@
     "\n",
     "we think that, again, some visual aid is needed. By applying the ``.qubitization`` operator $k$ times, we block encode the $k$-th Chebyshev polynomial of the first kind $T_k$. If you apply $W^k=(RU)^k$ $k$ times, you get $T_k$ block encoded. Do it once, $k=1$, you get the top left figure. Do it twice ($k=2$), you block-encode $T_2$ (top right figure). Do it $k=5$ times... yup, you guessed it (bottom right figure):\n",
     "\n",
-    "![Alt text](chebyshev.png)\n",
+    "![Alt text](cheb_poly.png)\n",
     "\n",
     "Just as with the basic walk operator, Qrisp abstracts the iterative application of $W$ into a simple method call. The ``BlockEncoding`` class provides a ``.chebyshev(k)`` method, which returns a new block encoding for the $k$-th Chebyshev polynomial $T_k$. This handles the construction of $W^k$ (or the appropriate sequence of reflections and select/``qswitch`` operators) internally.\n",
     "\n",
